--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 plugins {
     id 'java'
     id 'application'
+    id 'info.solidsoft.pitest' version '1.6.0'
+}
+
+pitest {
+    junit5PluginVersion = '0.12'
 }
 
 application {
